Changed OR Properties

--- a/VMP/ConfigFiles/config/OR.Properties
+++ b/VMP/ConfigFiles/config/OR.Properties
@@ -28,7 +28,7 @@ SelectSecurityQuestion=securityquestion1
 EnterSecurityAnswer=securityanswer1
 CheckingTermsandConditions=tos
 ##ClickCreateAccountButton=reg_submit
-VerifyNewUserSuccessMsg=//*[@id='container']/div[3]/div/div/h3
+##VerifyNewUserSuccessMsg=//*[@id='container']/div[3]/div/div/h3
 
 
 ## Login To Verio Market Place
@@ -47,19 +47,20 @@ ClickOnBuyNowButton=detail_button
 SelectStopTheHackerEdition=17
 EnterContactEmailAddressOfSTH=26_7
 EnterDomainNameOfSTH=27_7
-SelectingNumberOfAccountsForVerioVault=46
+SelectingNumberOfAccountsForVerioVault=//*[@id='46']
 EnterAdminAccountNameOfVerioVault=75_19
 EnterEmailAddressOfVerioVault=76_19
 ClickSubmitButton=submit
 ClickProceedToCheckout=//*[@id='container']/form/table/tfoot/tr[1]/td[3]/button
-SelectCreditCardType=card_cardType
-EnterCreditCardNo=card_accountNumber
+SelectCreditCardType=//*[@id='card_type']
+EnterCreditCardNo=//*[@id='card_number']
 SelectExpirationMonth=card_expirationMonth
 SelectExpirationYear=card_expirationYear
-EnterCVVCode=card_cvNumber
+EnterCVVCode=//*[@id='card_cvn']
 ClickT&CForVerioVault=term_verio_vault
 ClickT&CForStopTheHacker=term_stop_the_hacker
-##ClickOnPlaceOrderNow=order_submit
+ClickOnPlaceOrderNow=order_submit
+
 
 
 ## Ordering of Online Presence Product with the Created Account
